--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>MacArthur Commons Homeowners Association</title>
     <base href="https://macarthurcommons.com/">
     <style>
+        banner {
+        width: 100%;
+        height: 200px;
+        background-image: url('images/hoa_banner.webp');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 30px;
+        position: relative;
+    }
         * {
             margin: 0;
             padding: 0;
