--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
     <title>MacArthur Commons Homeowners Association</title>
     <base href="https://macarthurcommons.com/">
     <style>
-        banner {
+        .banner {
         width: 100%;
         height: 200px;
         background-image: url('images/hoa_banner.webp');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         margin-bottom: 30px;
-        position: relative;
-    }
+}
         * {
             margin: 0;
             padding: 0;
@@ -197,6 +193,8 @@
     </style>
 </head>
 <body>
+    <div class="banner">
+    </div>
     <div class="container">
         <header>
             <h1>MacArthur Commons Homeowners Association</h1>
