--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .banner {
         width: 100%;
-        height: auto;
+        height: 300px;
         background-image: url('images/hoa_banner.webp');
         background-size: cover;
         background-position: center;
