update class to "welcome"

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             border-radius: 4px;
         }
 
-        .meeting-info {
+        .welcome {
             background-color: #f8f9fa;
             border: 1px solid #dee2e6;
             padding: 20px;
@@ -86,7 +86,7 @@
             margin: 20px 0;
         }
 
-        .meeting-info h2 {
+        .welcome h2 {
             color: #2c3e50;
             margin-top: 0;
         }
@@ -201,7 +201,7 @@
         </header>
 
         <main>
-            <div class="meeting-info">
+            <div class="welcome">
                 <h2>Welcome to MacArthur Commons</h2>
                 <p>Welcome to the Village at MacArthur Commons Homeowners Association website. Our community consists of fifty-eight homes located in Irving, Texas. This website serves as a resource for residents to access important information, documents, and stay connected with our community.</p>
                 
