bylaw udpates and other changes

--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
             </div>
 
             <div class="highlight-box">
+                <h3>Proposed Changes to Covenant Attachments</h3>
+                <p>We have proposed changes to our community covenants. Please review the <a href="documents/CovenantAttachments2025_convertedToPDF.pdf" target="_blank" rel="noopener noreferrer"><strong>proposed changes document</strong></a> for more information.</p>
+                <h3>Proposed Architectural Policy</h3>
+                <p>Please review the proposed updates to our architectural guidelines in the <a href="documents/ArchitecturalReviewPolicy2025_convertedToPDF.pdf" target="_blank" rel="noopener noreferrer"><strong>architectural review policy document</strong></a>.</p>
+                <h3>Updated Bylaws</h3>
+                <p>The new 2025 Bylaws can be found in the HOA Documents section at the bottom of this page under <a href="documents/BylawsRewrite2025_convertedToPDF.pdf" target="_blank" rel="noopener noreferrer"><strong>New Bylaws 2025</strong></a>.</p>
+            </div>
+
+            <div class="highlight-box">
                 <h3>City of Irving</h3>
                 <p>For city services, permits, and information visit the <a href="https://www.cityofirving.org/" target="_blank" rel="noopener noreferrer"><strong>City of Irving website</strong></a>.</p>
             </div>
@@ -262,7 +271,8 @@
                 <h2>HOA Documents</h2>
                 <p>Here are the current HOA documents.</p>
                 <ul class="board-list">
-                    <li><a href="documents/bylaws.pdf" target="_blank" class="document-link">Bylaws</a></li>
+                    <li><a href="documents/BylawsRewrite2025_convertedToPDF.pdf" target="_blank" class="document-link">New Bylaws 2025</a></li>
+                    <li><a href="documents/bylaws.pdf" target="_blank" class="document-link">Old Bylaws</a></li>
                     <li><a href="documents/covenants.pdf" target="_blank" class="document-link">Covenants</a></li>
                     <li><a href="documents/owners-guide.pdf" target="_blank" class="document-link">HOA Owners Guide</a></li>
                 </ul>
