--- a/index.html
+++ b/index.html
@@ -223,12 +223,10 @@
             </div>
 
             <div class="highlight-box">
-                <h3>Proposed Changes to Covenant Attachments</h3>
-                <p>We have proposed changes to our community covenants. Please review the <a href="documents/CovenantAttachments2025_convertedToPDF.pdf" target="_blank" rel="noopener noreferrer"><strong>proposed changes document</strong></a> for more information.</p>
-                <h3>Proposed Architectural Policy</h3>
-                <p>Please review the proposed updates to our architectural guidelines in the <a href="documents/ArchitecturalReviewPolicy2025_convertedToPDF.pdf" target="_blank" rel="noopener noreferrer"><strong>architectural review policy document</strong></a>.</p>
-                <h3>Updated Bylaws</h3>
-                <p>The new 2025 Bylaws can be found in the HOA Documents section at the bottom of this page under <a href="documents/BylawsRewrite2025_convertedToPDF.pdf" target="_blank" rel="noopener noreferrer"><strong>New Bylaws 2025</strong></a>.</p>
+                <h3>Bylaws have been updated and added as of Nov 2025.</h3>
+                <h3>Policies have been udpated all in one document.</h3>
+                <p>This file includes the Flag Policy, Solar Policy, Religious Policy, Rain Barrel Policy, Access to Records Policy, Collection & Payment Plan Policy, Document Retention Policy and the Architectural Policy.</p>
+                <h3>Please see the HOA Documents section below to access the latest versions.</h3>
             </div>
 
             <div class="highlight-box">
@@ -271,9 +269,9 @@
                 <h2>HOA Documents</h2>
                 <p>Here are the current HOA documents.</p>
                 <ul class="board-list">
-                    <li><a href="documents/BylawsRewrite2025_convertedToPDF.pdf" target="_blank" class="document-link">New Bylaws 2025</a></li>
-                    <li><a href="documents/bylaws.pdf" target="_blank" class="document-link">Old Bylaws</a></li>
+                    <li><a href="documents/PDFofFinalBylawChanges2025.pdf" target="_blank" class="document-link">Bylaws</a></li>            
                     <li><a href="documents/covenants.pdf" target="_blank" class="document-link">Covenants</a></li>
+                    <li><a href="documents/FinalPolicyChanges2025.pdf" target="_blank"    class="document-link">Policies</a></li>
                     <li><a href="documents/owners-guide.pdf" target="_blank" class="document-link">HOA Owners Guide</a></li>
                 </ul>
             </div>
