moved documents section

--- a/index.html
+++ b/index.html
@@ -223,10 +223,22 @@
             </div>
 
             <div class="highlight-box">
-                <h3>Bylaws have been updated and added as of Nov 2025.</h3>
-                <h3>Policies have been udpated all in one document.</h3>
+                <h3>Bylaws</h3>
+                <p>The HOA Bylaws have been updated as of November 2025.</p>
+                <h3>Policies have been updated and now all in one document.</h3>
                 <p>This file includes the Flag Policy, Solar Policy, Religious Policy, Rain Barrel Policy, Access to Records Policy, Collection & Payment Plan Policy, Document Retention Policy and the Architectural Policy.</p>
                 <h3>Please see the HOA Documents section below to access the latest versions.</h3>
+            </div>
+
+            <div class="Documents-section">
+                <h2>HOA Documents</h2>
+                <p>Here are the current HOA documents.</p>
+                <ul class="board-list">
+                    <li><a href="documents/PDFofFinalBylawChanges2025.pdf" target="_blank" class="document-link">Bylaws</a></li>            
+                    <li><a href="documents/covenants.pdf" target="_blank" class="document-link">Covenants</a></li>
+                    <li><a href="documents/FinalPolicyChanges2025.pdf" target="_blank"    class="document-link">Policies</a></li>
+                    <li><a href="documents/owners-guide.pdf" target="_blank" class="document-link">HOA Owners Guide</a></li>
+                </ul>
             </div>
 
             <div class="highlight-box">
@@ -251,7 +263,7 @@
                 </ul>
             </div>
 
-            <div class="board-members">
+            <div class="Contact-info">
                 <h2>Contact Info</h2>
                 <div class="info-grid">
                     <div class="info-label">Homeowners Association Board email address:</div>
@@ -263,18 +275,7 @@
                     <div class="info-label">For zoning violations in the City of Irving:</div>
                     <div class="info-value">Code Enforcement <a href="tel:972-721-4929">972-721-4929</a></div>
                 </div>
-            </div>
-
-            <div class="board-members">
-                <h2>HOA Documents</h2>
-                <p>Here are the current HOA documents.</p>
-                <ul class="board-list">
-                    <li><a href="documents/PDFofFinalBylawChanges2025.pdf" target="_blank" class="document-link">Bylaws</a></li>            
-                    <li><a href="documents/covenants.pdf" target="_blank" class="document-link">Covenants</a></li>
-                    <li><a href="documents/FinalPolicyChanges2025.pdf" target="_blank"    class="document-link">Policies</a></li>
-                    <li><a href="documents/owners-guide.pdf" target="_blank" class="document-link">HOA Owners Guide</a></li>
-                </ul>
-            </div>
+            </div>            
         </main>
     </div>
 </body>
