board meeting udpate

--- a/index.html
+++ b/index.html
@@ -221,8 +221,15 @@
                     <li>Useful local resources</li>
                 </ul>
             </div>
+            
+            <div class="highlight-box" role="region" aria-label="Board Meeting Notice">
+                <h3>Board Meeting Notice</h3>
+                <p><strong>Date:</strong> Monday, December 8, 2025 — <strong>Time:</strong> 6:00 PM</p>
+                <p><strong>Location:</strong> 905 McCoy Dr.</p>
+                <p class="summary">Agenda: Establish date for the Annual Homeowners Meeting; Approval of the 2026 budget; Architectural Review Committee discussion.</p>
+            </div>
 
-            <div class="highlight-box">
+                <div class="highlight-box">
                 <h3>Bylaws</h3>
                 <p>The HOA Bylaws have been updated as of November 2025.</p>
                 <h3>Policies have been updated and now all in one document.</h3>
