--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="highlight-box" role="region" aria-label="Board Meeting Notice">
                 <h3>Board Meeting Notice</h3>
                 <p><strong>Date:</strong> Monday, December 8, 2025 — <strong>Time:</strong> 6:00 PM</p>
-                <p><strong>Location:</strong> 905 McCoy Dr.</p>
+                <p><strong>Location:</strong> See email.</p>
                 <p class="summary">Agenda: Establish date for the Annual Homeowners Meeting; Approval of the 2026 budget; Architectural Review Committee discussion.</p>
             </div>
 
