--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </ul>
                 </div>
                 
-                <p><strong>Proxy:</strong> If you cannot attend the meeting, please complete the attached voting proxy and return prior to the annual meeting via email or by texting the proxy to Amy Willingham.</p>
+                <p><strong>Proxy:</strong> If you cannot attend the meeting, please complete the voting proxy and return prior to the annual meeting via email or by texting the proxy to Amy Willingham.</p>
             </div>
 
             <div class="welcome">
